# a-little-parser

./: .gitignore  CMakeLists.txt  Cargo.toml  Parsing.cpp  README.md  explain.txt  functions.cpp  header.h
examples/: CMakeLists.txt  LittleParser.cpp
parser/src/: calculator.rs  main.rs  parser.rs
src/: CMakeLists.txt  Parser.cpp
src/include/: Parser.h
